# funkcijskoprojekt

./: README.md
scraper/: package.yaml  scraped_data.txt  scraper.cabal
scraper/app/: Main.hs
