cabal-version: 2.2

name:           scraper
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/scraper#readme>
homepage:       https://github.com/githubuser/scraper#readme
bug-reports:    https://github.com/githubuser/scraper/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/scraper

library
  exposed-modules:
      Lib
  other-modules:
      Paths_scraper
  autogen-modules:
      Paths_scraper
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , http-client
    , scalpel
    , text
    , network-uri >= 2.6.4.2
    , time
  default-language: Haskell2010

executable scraper-exe
  main-is: Main.hs
  other-modules:
      Paths_scraper
  autogen-modules:
      Paths_scraper
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , http-client
    , scalpel
    , text
    , network-uri >= 2.6.4.2
    , time
  default-language: Haskell2010

test-suite scraper-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_scraper
  autogen-modules:
      Paths_scraper
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , http-client
    , scalpel
    , text
    , network-uri >= 2.6.4.2
    , time
  default-language: Haskell2010
